--- a/mystyle.css
+++ b/mystyle.css
@@ -10,7 +10,7 @@ body{
 
 .unable{
   color:grey;
-  
+  pointer-events:none;
 }
 
 div.header{
@@ -105,10 +105,6 @@ bootstrap.css:6457
   background-color:white;
 }a
 </changing the navigation style>*/
-
-
-
-
 
 
 /*This part is for animation when user scroll down to the main text element*/
